/*
* to compile: /d/DDownloads/protoc-26.0-win64/bin/protoc.exe --go_out=. --proto_path=. gameState.proto
*/
syntax = "proto3";

package idleCoder;

option go_package = ".";


message File {
    string name = 1;
    string contents = 2;
    string permissions = 3;
    string owner = 4;
    int32 size = 5;
    int64 modifyDate = 6;
}

message Directory {
    string name = 1;
    repeated File files = 2;
    string permissions = 3;
    string owner = 4;
    repeated Directory dirs = 5;
    int64 modifyDate = 6;
}

message Process {
    string name = 1;
    string amount = 2;
    double linesPerHour = 3;
    double cost = 4;
    repeated string tech = 5;
}

message Upgrade {
    string name = 1;
    float64 level = 2;
}

message PlayerInfo {
    int64 lastSave = 1;
    double lines = 2;
    string username = 3;
    File earnedAchievements = 4;
    repeated string history = 5;
    repeated Process processes = 6;
    Directory dirs = 7;
    int32 wpm = 8;
    int32 processingPower = 9;
    repeated Upgrade tech = 10;
    repeated Upgrade lang = 11;
    repeated Upgrade research = 12;
}
